[package]
name = "kvs"
version = "0.2.0"
authors = ["Daniel Duan"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["cargo"]}
failure = "0.1.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"