[package]
name = "kvs"
version = "0.3.0"
authors = ["Daniel Duan"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["cargo"]}
failure = "0.1.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
tempfile = "3.0.7"
strum_macros = "0.24.1"
strum = { version = "0.24.1", features = ["derive"] }
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
rand_chacha = "0.3.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false